[tool.poetry]
name = "njs"
version = "2.0.0"
description = "基于 NoneBot 的 QQ 机器人——脑积水！"
authors = ["zhulinyv <zhulinyv2005@outlook.com>"]
license = "AGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiocache = "0.11.1"
aiofiles = "23.2.1"
aiohttp = "3.8.5"
alembic = ">=1.9.4"
amis-python = "1.0.8.post2"
anyio = "3.7.0"
apscheduler = "3.9.1.post1"
arrow = "1.2.3"
asyncio = "3.4.3"
async-bing-client = "0.1.6"
async-claude-client = "0.1.2"
async-poe-client = "0.3.6"
attrs = "22.2.0"
bbcode = "1.1.0"
bs4 = "0.0.1"
cachetools = "5.2.0"
click = "8.1.3"
cn2an = "0.5.17"
configobj = "^5.0.8"
dateparser = ">=1.1.1"
edgegpt = "0.2.1"
emoji = "2.1.0"
expandvars = "0.9.0"
expiringdict = "1.2.2"
faker = "16.4.0"
fastapi = ">=0.93.0"
feedparser = "6.0.10"
fuzzywuzzy = "0.18.0"
githubkit = "0.9.6"
gitpython = "3.1.29"
h11 = "0.12.0"
h2 = "4.1.0"
httpx = "0.24.1"
humanize = "4.4.0"
idna = "3.4"
imgkit = "1.2.3"
importlib-metadata = "4.12.0"
iso8601 = "1.1.0"
jieba = "0.42.1"
jinja2 = "3.1.2"
langdetect = "1.0.9"
# littlepaimon-utils = ">=1.0.2"
loguru = ">=0.6.0"
lxml = "4.9.1"
mako = "1.2.4"
matplotlib = "3.6.2"
meme-generator = ">=0.0.11"
nb-cli = "1.1.2"
nonebot-adapter-onebot = "2.2.3"
nonebot-plugin-alconna = "0.27.2"
nonebot-plugin-apscheduler = ">=0.2.0"
nonebot-plugin-bind = "0.2.2"
nonebot-plugin-chatrecorder = "0.4.2"
nonebot-plugin-datastore = ">=0.6.2"
# nonebot-plugin-gocqhttp = ">=0.6.10"
nonebot-plugin-guild-patch = "0.2.2"
nonebot-plugin-htmlrender = "0.2.1"
nonebot-plugin-localstore = ">=0.4.1"
nonebot-plugin-send-anything-anywhere = ">=0.2.6"
nonebot-plugin-templates = "0.1.6"
nonebot-plugin-txt2img = ">=0.3.0"
nonebot-plugin-web-config = "0.1.3"
nonebot2 = ">=2.0.0"
numpy = ">=1.23.4"
markdown = "3.4.4"
openai = "0.27.0"
opencv-contrib-python = ">=4.9.0.80"
opencv-python = ">=4.9.0.80"
orjson = "3.9.0"
paho-mqtt = "1.6.1"
pandas = "1.5.2"
parsel = "1.7.0"
patool = "1.12"
peewee = "3.15.3"
pil-utils = ">=0.1.7"
ping3 = "^4.0.4"
playwright = "1.27.1"
poe-api = "^0.5.3"
psutil = "5.9.4"
pydantic = ">=1.10.5"
pyjwt = "2.6.0"
pymongo = "4.3.2"
pypinyin = "0.47.1"
python-a2s = "1.3.0"
python-jose = "3.3.0"
python-socketio = "5.7.2"
pyunpack = "0.3"
pytz = "2022.6"
pyzbar = ">=0.1.9"
qrcode = "7.3.1"
rarfile = "4.0"
rcon = "2.3.9"
regex = ">=2022.3.2"
revchatgpt = "^6.8.6"
requests = "2.28.1"
rply = "0.7.8"
rtoml = "0.9.0"
ruamel-yaml = "0.17.21"
ruamel-yaml-clib = "0.2.7"
scikit-learn = "1.1.3"
shapely = "2.0.1"
sqlalchemy = "2.0.9"
srctools = "2.3.13"
strenum = "0.4.15"
tiktoken = "0.4.0"
tinydb = "4.7.0"
toml = "0.10.2"
tortoise-orm = "0.19.2"
tqdm = "4.64.1"
tweepy = "4.14.0"
typing-extensions = ">=4.7.1"
ujson = "5.5.0"
urllib3 = "1.26.12"
webuiapi = "^0.9.6"
win32-setctime = "1.1.0"
wordcloud = "1.8.2.2"

[tool.nonebot]
plugins = ["nonebot_plugin_guild_patch"]
plugin_dirs = ["src/plugins"]
adapters = [{name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11", project_link = "nonebot-adapter-onebot", desc = "OneBot V11 协议"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
