[tool.poetry]
name = "nonebot_plugin_antirecall"
version = "0.1.0"
description = "Anti-recall plugin for QQbot in Nonebot2"
authors = ["Jerry <jerry080801@icloud.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Jerry080801/nonebot-plugin-antirecall"
repository = "https://github.com/Jerry080801/nonebot-plugin-antirecall"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-beta.4"
nonebot-adapter-onebot = "^2.0.0-beta.1"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"