[tool.poetry]
name = "littlepaimon_utils"
version = "1.0.2"
description = "小派蒙的一些封装好的工具方法"
authors = ["惜月 <277073121@qq.com>"]
license = "AGPL"
packages = [
    { include = "littlepaimon_utils/*.py", from = ".."}
]

[[tool.poetry.source]]
name = "ali"
default = true
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.poetry.dependencies]
python = "^3.7.3"
httpx = "^0.23.0"
pillow = "^9.1.1"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
